--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Priyam Desai",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
